; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_memory.c_MEMORY_GetCharset.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_memory.c_MEMORY_GetCharset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@emuos_h = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MEMORY_GetCharset(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i64, i64* @emuos_h, align 8
  %5 = add nsw i64 %4, 512
  %6 = call i32 @memcpy(i32* %3, i64 %5, i32 256)
  %7 = load i32*, i32** %2, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 256
  %9 = load i64, i64* @emuos_h, align 8
  %10 = call i32 @memcpy(i32* %8, i64 %9, i32 512)
  %11 = load i32*, i32** %2, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 768
  %13 = load i64, i64* @emuos_h, align 8
  %14 = add nsw i64 %13, 768
  %15 = call i32 @memcpy(i32* %12, i64 %14, i32 256)
  ret void
}

declare dso_local i32 @memcpy(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
